Grease pencil: Eraser icon disappear while erasing #43941

Closed
opened 2015-03-09 14:32:49 +01:00 by Matias Mendiola · 7 comments

System Information:
Windows 7 64bit (SP 1) - NVIDIA GeForce GTX 560

Blender Version
Broken: 2.74 test build

Short description of error
Grease Pencil eraser icon disappear when you are erasing without holding right button.

Exact steps for others to reproduce the error
On Grease Pencil, select ERASE and then click (left button) with the mouse or use a pen tablet without holding right button, The eraser still works but the icon disappear.

**System Information:** Windows 7 64bit (SP 1) - NVIDIA GeForce GTX 560 **Blender Version** Broken: 2.74 test build **Short description of error** Grease Pencil eraser icon disappear when you are erasing without holding right button. **Exact steps for others to reproduce the error** On Grease Pencil, select ERASE and then click (left button) with the mouse or use a pen tablet without holding right button, The eraser still works but the icon disappear.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @mendio

Added subscriber: @mendio
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Confirmed and will have a look.

Confirmed and will have a look.
Julian Eisel self-assigned this 2015-03-09 14:42:10 +01:00

This issue was referenced by f1a0c2a4f0

This issue was referenced by f1a0c2a4f025ce26aabab055ce04aecf34bf90ea

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit f1a0c2a4f0.

Closed by commit f1a0c2a4f0.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43941
No description provided.