Fix T43941: Grease pencil eraser outline vanishes